--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         function formatContent() {
             const script = [
                 '<span class="prompt"></span>show --photo^1500',
-                '<span class="output"><img src="https://googleusercontent.com/file_content/1" alt="David Khachatryan" class="w-24 h-24 rounded-full my-4 float-left mr-4"></span>',
+                '<span class="output"><img src="profile.webp" alt="David Khachatryan" class="w-24 h-24 rounded-full my-4 float-left mr-4"></span>',
                 '<span class="prompt"></span>cat ./profile.txt^1500',
                 '<span class="output">DAVID KHACHATRYAN<br><a href="https://github.com/davkh" target="_blank">github.com/davkh</a> | <a href="https://linkedin.com/in/davkh" target="_blank">linkedin.com/in/davkh</a> | Yerevan, Armenia</span>',
                 '<span class="output" style="clear:both;">----------------------------------------------------------------------------------------------------------------</span>',
