--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         function formatContent() {
             const script = [
                 '<span class="prompt"></span>cat ./profile.txt --show-photo^1500',
-                '<span class="output"><img id="profile-photo" src="profile.webp" alt="David Khachatryan" class="w-24 h-24 rounded-full my-4 float-left mr-4" style="opacity:0; transition: opacity 0.5s;"></span>',
+                '<span class="output"><img id="profile-photo" src="profile.webp" alt="David Khachatryan" class="w-24 h-24 rounded-full my-4 float-left mr-4"></span>',
                 '<span class="output"><strong>DAVID KHACHATRYAN</strong></span>',
                 '<span class="output">ENGINEERING DIRECTOR &middot; HANDS-ON C# ENGINEER (Ruby & JavaScript for hobby projects)</span>',
                 '<span class="output" style="clear:both;"><a href="https://github.com/davkh" target="_blank">github.com/davkh</a> | <a href="https://linkedin.com/in/davkh" target="_blank">linkedin.com/in/davkh</a> | Yerevan, Armenia</span>',
