--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                 '<span class="output"><strong>DAVID KHACHATRYAN</strong></span>',
                 '<span class="output">ENGINEERING DIRECTOR &middot; HANDS-ON C# ENGINEER (Ruby & JavaScript for hobby projects)</span>',
                 '<span class="output" style="clear:both;"><a href="https://github.com/davkh" target="_blank">github.com/davkh</a> | <a href="https://linkedin.com/in/davkh" target="_blank">linkedin.com/in/davkh</a> | Yerevan, Armenia</span>',
+                '<span class="output"> </span>',
                 '<span class="output output-separator">---------------------------------------------------------------------------------</span>',
                 '<span class="prompt"></span>cat ./experience.log | less^1500',
                 '<span class="output"><strong>Ultra Labs - Startup Studio &middot; Engineering Director (2023 - present)</strong></span>',
